--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     onsubmit="beforesubmit()">
     
     <input type=hidden name="oid" value="00D5h000006cyE1">
-    <input type=hidden name="retURL" value="">
+    <input type=hidden name="retURL" value="https://pranavjannu.github.io/Web-to-Lead-JavaScript-Project/thanks.html">
     <input type=hidden name="Lead_Date__c" class="outputdate"/>
     
     <label for="first_name">First Name</label>
