--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <!-- Lead Date:<span class="dateInput dateOnlyInput"><input  id="00N5h00000HcGD1" name="00N5h00000HcGD1" size="12" type="text" /></span><br> -->
     
     <div class="g-recaptcha" 
+        data-callback="captchasuccess"
         data-sitekey="6Lf-ei4pAAAAAJuYEApRaZuvQ9DKN1f5VlzPQMwC">
     </div><br>
     
