--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Create Lead</h1>
     <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00D5h000006cyE1" 
     method="POST"
-    onsubmit="beforesubmit()">
+    onsubmit="beforesubmit(event)">
 
     <input type=hidden 
     name='captcha_settings' 
